k8s/student-app-ingress.yaml
apiVersion: networking.k8s.io/   #v1beta1  for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: student-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  #$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: student-app-client-service
            servicePort: 80
        - path: /api/?(.*)
          backend:
            serviceName: student-app-api
            servicePort: 8080
